@startuml classDiagram
    class Main {
        +main(args: String[])
    }

    class DirectoryDoors {
        -allDoors: ArrayList~Door~
        +makeDoors()
        +findDoorById(id: String): Door
        +getAllDoors(): ArrayList~Door~
    }

    class DirectoryUsers {
        -users: ArrayList~User~
        -rolesMap: Map~String, AuthGroup~
        +makeUsers()
        +loadRoles()
        +loadUsers()
        +findUserByCredential(credential: String): User
        +findUserByName(name: String): User
    }

    class DirectoryAreas {
        -areas: ArrayList~Area~
        +defineAreas(doors: ArrayList~Door~)
        +findArea(id: String): Area
        +getAreas(): ArrayList~Area~
    }

    class User {
        -name: String
        -credential: String
        -role: String
        -authGroup: AuthGroup
        +getAuthGroup(): AuthGroup
        +toString(): String
    }

    class AuthGroup {
        -actions: ArrayList~String~
        -allowedAreas: ArrayList~Area~
        -schedule: Schedule
        +isAllowed(action: String, id: String, now: LocalDateTime): boolean
    }

    class Schedule {
        -startDate: LocalDate
        -endDate: LocalDate
        -startTime: LocalTime
        -endTime: LocalTime
        -daysOfWeek: ArrayList~DayOfWeek~
        +isWorking(dateTime: LocalDateTime): boolean
    }

    class Door {
        -id: String
        -space: String
        -closed: boolean
        -state: DoorState
        +processRequest(request: RequestReader)
        +setState(doorState: DoorState)
        +toJson(): JSONObject
    }

    class DoorState {
        <<abstract>>
        #door: Door
        +unlock()
        +open()
        +lock()
        +close()
        +unlockShortly()
    }

    class Locked {
    }
    class Unlocked {
    }
    class Propped {
    }
    class UnlockedShortly {
        +update(o: Observable, arg: Object)
    }

    class Clock {
        -instance: Clock
        +getInstance(): Clock
        +start()
        +stop()
    }

    class Area {
        <<abstract>>
        -id: String
        +acceptVisitor(v: Visitor)
        +toJson(depth: int): JSONObject
    }

    class Partition {
        -spaces: ArrayList~Area~
        +getSpaces(): ArrayList~Area~
    }

    class Space {
        -doors: ArrayList~Door~
        +getDoors(): ArrayList~Door~
    }

    class Visitor {
        <<interface>>
        +visitSpace(s: Space)
        +visitPartition(p: Partition)
        +getArea(): Area
        +getDoors(): ArrayList~Door~
    }

    class AreaFinder {
        -id: String
        -area: Area
        +visitSpace(s: Space)
        +visitPartition(p: Partition)
    }

    class AccessDoors {
        -doors: ArrayList~Door~
        +visitSpace(s: Space)
        +visitPartition(p: Partition)
    }

    class WebServer {
        +main(args: String[])
    }

    
    Main ..> DirectoryDoors : init
    Main ..> DirectoryUsers : init
    Main ..> DirectoryAreas : init
    Main ..> WebServer : starts

    DirectoryDoors "1" *-- "*" Door
    DirectoryUsers "1" *-- "*" User
    DirectoryAreas "1" *-- "*" Area
    
    User --> AuthGroup
    AuthGroup --> Schedule
    AuthGroup ..> AreaFinder : uses
    
    Door --> DoorState
    DoorState <|-- Locked
    DoorState <|-- Unlocked
    DoorState <|-- Propped
    DoorState <|-- UnlockedShortly
    
    UnlockedShortly ..> Clock : observes
    
    Area <|-- Partition
    Area <|-- Space
    Partition "1" o-- "*" Area
    Space "1" o-- "*" Door
    
    Visitor <|.. AreaFinder
    Visitor <|.. AccessDoors
    Area ..> Visitor : accepts

@enduml